--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "convert-csv-to-array": "^1.0.3",
     "css-loader": "^6.3.0",
+    "csv-loader": "^3.0.3",
     "style-loader": "^3.3.0",
     "webpack": "^5.53.0",
-    "webpack-cli": "^4.8.0"
+    "webpack-cli": "^4.8.0",
+    "xml-loader": "^1.2.1"
   }
 }
