--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "clean-webpack-plugin": "^4.0.0",
     "convert-csv-to-array": "^1.0.3",
     "css-loader": "^6.3.0",
     "csv-loader": "^3.0.3",
