--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "convert-csv-to-array": "^1.0.3",
     "css-loader": "^6.3.0",
     "csv-loader": "^3.0.3",
+    "file-loader": "^6.2.0",
     "style-loader": "^3.3.0",
     "webpack": "^5.53.0",
     "webpack-cli": "^4.8.0",
